tests/invalid/type/arity_string_substring_too_few.pts
import Io;

function main() : void {
    string s = "abc";
    string t = s.substring(0);
}
